[gd_scene load_steps=4 format=3 uid="uid://bsprkf01oe802"]

[ext_resource type="Texture2D" uid="uid://btvah04hpmxjk" path="res://assets/images/default.png" id="1_n3cgn"]
[ext_resource type="Script" path="res://scripts/cell.gd" id="1_o5o8p"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_t2f2n"]
size = Vector2(32, 32)

[node name="Cell" type="Control" node_paths=PackedStringArray("over")]
custom_minimum_size = Vector2(32, 32)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_o5o8p")
over = NodePath("over")

[node name="default" type="TextureRect" parent="."]
custom_minimum_size = Vector2(32, 32)
layout_mode = 0
offset_right = 32.0
offset_bottom = 32.0
texture = ExtResource("1_n3cgn")
stretch_mode = 2

[node name="over" type="ColorRect" parent="."]
offset_right = 32.0
offset_bottom = 32.0
mouse_filter = 1
color = Color(1, 1, 1, 0.180392)

[node name="StaticBody2D" type="StaticBody2D" parent="."]
input_pickable = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(16, 16)
shape = SubResource("RectangleShape2D_t2f2n")

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="StaticBody2D" to="." method="_on_static_body_2d_mouse_entered"]
[connection signal="mouse_exited" from="StaticBody2D" to="." method="_on_static_body_2d_mouse_exited"]
